<resources>
    <string name="app_name">HHU CLUB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="article">Beiträge</string>
    <string name="events">Veranstaltungen</string>
    <string name="trade">Tausch</string>
    <string name="locality">Erkunde</string>
    <string name="food">Essen</string>
    <string name="message">Nachrichten</string>
    <string name="nav_open_drawer">open</string>
    <string name="nav_close_drawer">close</string>
    <string name="welcome">Hey, schön dich wiederzusehen!</string>
    <string name="hot_articles">Heiße Beiträge 🔥</string>
    <string name="clickHint">Klick 👆 einfach auf die Beiträge</string>
    <string name="addArticle">+ Verfasse ✍️</string>
    <string name="categoryFilter">Kategorie</string>
    <string name="applyFilter">Filtern</string>
    <string name="resetFilter">Zurück</string>
    <string name="articleSendHint">Artikel schreiben</string>
    <string name="createArticle">Schreibe ✍️ Deinen Artikel 📖</string>
    <string name="hot_events">Heiße Events 🔥</string>
    <string name="browseEvents">Entdecke 🎉</string>
    <string name="addEvent">+ Erstelle</string>
    <string name="tradeTitle">Tausche, Verkaufe und Kaufe</string>
    <string name="hotOffers">Heiße Angebote 🔥</string>
    <string name="addOffer">Biete an 🏷️</string>
    <string name="offers">Angebote 🛍</string>
    <string name="stars">🌟</string>
    <string name="localityTitle">Erkunde 🏬</string>
    <string name="hhu_sights">An der HHU 🏢</string>
    <string name="addLocality">Empfehle 👋</string>
    <string name="hhu_link">
        <a href="https://www.hhu.de/die-hhu/kontakt-und-services/lageplan-und-anfahrt">HHU-Lageplan</a>
    </string>
    <string name="hotLocalities">Heiße Orte 🔥</string>
    <string name="action_share">Teile 🔗</string>
    <string name="dus_stadtmitte">In der Düsseldorfer Stadtmitte 🚀</string>
    <string name="dus_rhein">Am Rhein 🌊</string>
    <string name="messengerTitle">Chatte 💬</string>
    <string name="startChat">+ Sende Chatanfrage</string>
    <string name="foodTitle">Essen</string>
    <string name="foodTrends">Heiße Empfehlungen 🔥</string>
    <string name="addEmpfehlung">Empfehle 🍔</string>
    <string name="trendsFilter">Trends</string>
    <string name="friendsFilter">Freunde</string>
</resources>