<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context="de.hhu.hhu_go.ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:fontFamily="@font/clashgrotesk_semibold"
        android:textSize="30sp"
        android:textColor="@color/NavyBlue2"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_events"
        android:fontFamily="@font/clashgrotesk_semibold"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="15sp"
        android:textSize="23sp"
        android:textColor="@color/NavyBlue"
        android:layout_gravity="start" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_events_recycler"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browseEvents"
        android:fontFamily="@font/clashgrotesk_semibold"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="15sp"
        android:textSize="23sp"
        android:textColor="@color/NavyBlue"
        android:layout_gravity="start" />

    <LinearLayout
        android:id="@+id/filterEventBar"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/categoryEventFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/clashgrotesk_semibold"
            android:text="@string/categoryFilter"
            android:outlineAmbientShadowColor="@color/NavyBlue2"
            android:color="@color/NavyBlue2"
            android:textColor="@color/NavyBlue"/>

        <Button
            android:id="@+id/applyEventFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/clashgrotesk_semibold"
            android:text="@string/applyFilter"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/resetEventFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:fontFamily="@font/clashgrotesk_semibold"
            android:text="@string/resetFilter"
            android:textColor="@color/white"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_recycler"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/addEvent"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:fontFamily="@font/clashgrotesk_semibold"
        android:text="@string/addEvent"
        android:textColor="@color/white"/>
</LinearLayout>