<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context="de.hhu.hhu_go.ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:fontFamily="@font/clashgrotesk_semibold"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        android:textColor="@color/NavyBlue2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/clashgrotesk_regular"
        android:layout_marginBottom="30dp"
        android:textSize="23sp"
        android:textColor="@color/NavyBlue"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/filterTrendsBar"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="10sp">

        <Button
            android:id="@+id/trendsFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/clashgrotesk_semibold"
            android:text="@string/trendsFilter"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/friendsFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:fontFamily="@font/clashgrotesk_semibold"
            android:text="@string/friendsFilter"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_articles"
        android:fontFamily="@font/clashgrotesk_semibold"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="15sp"
        android:textSize="23sp"
        android:textColor="@color/NavyBlue"
        android:layout_gravity="start" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_article_recycler"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/clickHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickHint"
        android:fontFamily="@font/clashgrotesk_regular"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:textSize="23sp"
        android:textColor="@color/NavyBlue"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_events"
        android:fontFamily="@font/clashgrotesk_semibold"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="15sp"
        android:textSize="23sp"
        android:textColor="@color/NavyBlue"
        android:layout_gravity="start" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top_events_recycler"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotLocalities"
        android:fontFamily="@font/clashgrotesk_semibold"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="15sp"
        android:textSize="23sp"
        android:textColor="@color/NavyBlue"
        android:layout_gravity="start" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top_locality_recycler"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp">
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>